Améliorations, ajout de l'option n pour faire un top N, Tests ajoutés mais pas complets

--- a/Tests/Test2/description
+++ b/Tests/Test2/description
@@ -1,1 +1,1 @@
-On ne met pas de fichier log 
+Ce test permet de vérifier que l'application renvoie une erreur lorsque le fichier de log a lire est manquant.
