--- a/Tests/Test3/description
+++ b/Tests/Test3/description
@@ -1,1 +1,1 @@
-Test du code retour du programme correct
+Ce test permet de vérifier que l'application fonctionne et ne prends pas en compte les fichiers images, et d'extension css ou js.
