--- a/Tests/Test5/description
+++ b/Tests/Test5/description
@@ -1,1 +1,1 @@
-Essai de test de recopie d'entrée standard non correct
+Ce test permet de vérifier que l'application demande un nom pour le fichier au format GraphViz à créer.
