--- a/Tests/Test6/description
+++ b/Tests/Test6/description
@@ -1,1 +1,1 @@
-Ce test permet de vérifier la production de deux fichiers en sortie du programme testé
+Ce test permet de vérifier que l'application ne prends pas en compte les logs qui n'appartiennent pas à l'intervalle [H,H+1] avec l'option -t.
